# mutatest2

./: .envrc  CONTRIBUTING.rst  README.rst  justfile  pyproject.toml
mutatest/tests/: __init__.py
